--- a/roles/ui/files/FWO.UI/Pages/Help/HelpSettingsOwners.cshtml
+++ b/roles/ui/files/FWO.UI/Pages/Help/HelpSettingsOwners.cshtml
@@ -27,6 +27,7 @@
         <li>@(Html.Raw(userConfig.GetText("H5588")))</li>
         <li>@(Html.Raw(userConfig.GetText("H5589")))</li>
         <li>@(Html.Raw(userConfig.GetText("H5590")))</li>
+        <li>@(Html.Raw(userConfig.GetText("H5611a")))</li>
         <li>@(Html.Raw(userConfig.GetText("H5664")))</li>        
     </ul>
 </div>
