--- a/roles/ui/files/FWO.UI/Pages/Settings/SettingsAppDataImport.razor
+++ b/roles/ui/files/FWO.UI/Pages/Settings/SettingsAppDataImport.razor
@@ -53,6 +53,10 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row mt-2" data-toggle="tooltip" title="@(userConfig.PureLine("H5611a"))">
+            <label class="col-form-label col-sm-4">@userConfig.GetText("importAppDataScriptArgs"):</label>
+            <input type="text" class="col-sm-6" @bind="configData!.ImportAppDataScriptArgs" />
+        </div>
         <div class="form-group row mt-2" data-toggle="tooltip" title="@(userConfig.PureLine("H5612"))">
             <label class="col-form-label col-sm-4">@(userConfig.GetText("importAppDataSleepTime")):</label>
             <input type="number" min="0" class="col-sm-2" @bind="configData!.ImportAppDataSleepTime" />
