--- a/roles/ui/files/FWO.UI/Pages/Reporting/Reports/RuleBaseReport.razor
+++ b/roles/ui/files/FWO.UI/Pages/Reporting/Reports/RuleBaseReport.razor
@@ -49,19 +49,19 @@
                 <Column TableItem="Rule" Context="rule" Title="@(userConfig.GetText("action"))" Field="@(rule => rule.OrderNumber)">
                     <Template>
                         <div class="form-check" @onclick:stopPropagation="true">
-                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="recertifyRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" @onchange="() => {rule.Metadata.Recert=true; rule.Metadata.ToBeRemoved=false;}">
+                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="recertifyRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" @onchange="async () => {rule.Metadata.Recert=true; rule.Metadata.ToBeRemoved=false; await EnsureRuleSelected(rule);}">
                             <label class="form-check-label" for="recertifyRadio@(rule.Id)">
                                 @(userConfig.GetText("recertify"))
                             </label>
                         </div>
                         <div class="form-check" @onclick:stopPropagation="true">
-                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="decertifyRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" @onchange="() => {rule.Metadata.Recert=false; rule.Metadata.ToBeRemoved=true;}">
+                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="decertifyRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" @onchange="async () => {rule.Metadata.Recert=false; rule.Metadata.ToBeRemoved=true; await EnsureRuleSelected(rule);}">
                             <label class="form-check-label" for="decertifyRadio@(rule.Id)">
                                 @(userConfig.GetText("decertify"))
                             </label>
                         </div>
                         <div class="form-check" @onclick:stopPropagation="true">
-                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="noneRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" checked @onchange="() => {rule.Metadata.Recert=false; rule.Metadata.ToBeRemoved=false;}">
+                            <input class="form-check-input" type="radio" name="certification@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" id="noneRadio@(rule.Id.ToString()+':'+rule.OwnerId.ToString())" checked @onchange="async () => {rule.Metadata.Recert=false; rule.Metadata.ToBeRemoved=false; await EnsureRuleSelected(rule);}">
                             <label class="form-check-label" for="noneRadio@(rule.Id)">
                                 @(userConfig.GetText("later"))
                             </label>
@@ -246,5 +246,14 @@
         string username = new DistName(recert.UserDn).UserName;
         return $"{userConfig.GetText(recert.Recertified ? "recertified_by" : "decertified_by")} {username} " +
             $"{userConfig.GetText("as_owner")} {recert.FwoOwner?.Name} {userConfig.GetText("comment")}: {recert.Comment}";
+    }
+
+    private async Task EnsureRuleSelected(Rule rule)
+    {
+        if (!SelectedRules.Any(selectedRule => selectedRule.Id == rule.Id))
+        {
+            SelectedRules.Add(rule);
+            await SelectedRulesChanged.InvokeAsync(SelectedRules);
+        }
     }
 }
