fix auto-format error

--- a/roles/ui/files/FWO.UI/Pages/Login.razor
+++ b/roles/ui/files/FWO.UI/Pages/Login.razor
@@ -234,7 +234,7 @@
                 else
                 {
                     // There was an error trying to authenticate the user. Probably invalid credentials or the middleware server is
-                    unreachable
+                    // unreachable
                     if (authResponse.Data != null)
                     {
                         // Probably invalid credentials
