cleanup rule recert metadata handling + centalize output

--- a/roles/ui/files/FWO.UI/Pages/Certification.razor
+++ b/roles/ui/files/FWO.UI/Pages/Certification.razor
@@ -308,7 +308,7 @@
                 foreach (var rule in rb.Rules)
                 {
                     rulesFound = true;
-                    rule.Metadata.UpdateRecertPeriods(userConfig.RecertificationPeriod, userConfig.RecertificationNoticePeriod);
+                    return;
                 }
             }
         }
