--- a/roles/ui/files/FWO.UI/Pages/Reporting/ReportedRulesForDiff.razor
+++ b/roles/ui/files/FWO.UI/Pages/Reporting/ReportedRulesForDiff.razor
@@ -47,30 +47,7 @@
         }
 
         <DetailTemplate TableItem="Rule">
-            <Detail Title="@(userConfig.GetText("name"))" Data="@context.Name?.ToString()" />
-            <Detail Title="@(userConfig.GetText("uid"))" Data="@context.Uid?.ToString()" />
-            <Detail Title="@(userConfig.GetText("action"))" Data="@context.Action?.ToString()" />
-            <Detail Title="@(userConfig.GetText("track"))" Data="@context.Track?.ToString()" />
-            <Detail Title="@(userConfig.GetText("comment"))" Data="@context.Comment?.ToString()" />
-            @* <Detail Title="@(userConfig.GetText("source_zone"))" Data="@context.SourceZone?.Name" /> *@
-            @* <Detail Title="@(userConfig.GetText("destination_zone"))" Data="@context.DestinationZone?.Name" /> *@
-            <Detail Title="@(userConfig.GetText("enabled"))" Data="@((!context.Disabled).ToString())" />
-            @if(context.Metadata != null)
-            {
-                <Detail Title="@(userConfig.GetText("created"))" Data="@context.Metadata?.Created?.ToString()" />
-                <Detail Title="@(userConfig.GetText("last_modified"))" Data="@context.Metadata?.LastModified?.ToString()" />
-                <Detail Title="@(userConfig.GetText("first_hit"))" Data="@context.Metadata?.FirstHit?.ToString()" />
-                <Detail Title="@(userConfig.GetText("last_hit"))" Data="@context.Metadata?.LastHit?.ToString()" />
-                <Detail Title="@(userConfig.GetText("last_certify_date"))" Data="@context.Metadata?.LastCertified?.ToString()" />
-                <Detail Title="@(userConfig.GetText("last_recertifier"))" Data="@context.Metadata?.LastCertifierName?.ToString()" />
-                <Detail Title="@(userConfig.GetText("decert_date"))" Data="@context.Metadata?.DecertificationDate?.ToString()" />
-                <Detail Title="@(userConfig.GetText("recert_comment"))" Data="@context.Metadata?.Comment?.ToString()" />
-                <Detail Title="@(userConfig.GetText("recert_history"))" Data="@(context.Metadata?.RecertHistory.Count > 0 ? ":" : "")" />
-                @foreach(var recert in context.Metadata!.RecertHistory)
-                {
-                    <Detail Title="@(recert.RecertDate.ToString())" Data="@(GetHistoryString(recert))" />
-                }
-          }
+            <RuleDetails Rule="context" Extended="true"/>
         </DetailTemplate>
         <Pager ShowPageNumber="true" ShowTotalCount="true" />
     </Table>
