--- a/roles/ui/files/FWO.UI/Shared/RuleSelector.razor
+++ b/roles/ui/files/FWO.UI/Shared/RuleSelector.razor
@@ -154,7 +154,7 @@
     {
         Management? mgt = Managements.FirstOrDefault(m => m.Id == rule.MgmtId);
         Rulebase? rulebase = mgt?.Rulebases.FirstOrDefault(rb => rb.Id == rule.RulebaseId);
-        return $"<div class=\"row\"><div class=\"col-sm-2 border bg-transparent\">{mgt?.Name}</div><div class=\"col-sm-2 border bg-transparent\">{rulebase?.Name}</div><div class=\"col-sm-8 border bg-transparent\">{DisplayRuleDetails(rule)}</div></div>";
+        return $"<div class=\"row\"><div class=\"col-sm-2 text-truncate\">{mgt?.Name}</div><div class=\"col-sm-2 text-truncate\">{rulebase?.Name}</div><div class=\"col-sm-8\">{DisplayRuleDetails(rule)}</div></div>";
     }
 
     private string? DisplayRuleDetails(Rule rule)
