--- a/roles/ui/files/FWO.UI/Pages/Help/HelpReportingDataOutput.cshtml
+++ b/roles/ui/files/FWO.UI/Pages/Help/HelpReportingDataOutput.cshtml
@@ -16,6 +16,7 @@
     @(Html.Raw(userConfig.GetText("H1401")))
     <ul>
         @(Html.Raw(userConfig.GetText("H1402")))
+        <li><b>LastModified</b> shows the import date when the rule last changed (Rules, Compliance, Recertification).</li>
     </ul>
     @(Html.Raw(userConfig.GetText("H1403")))
 </div>
